// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueList should render correctly on loading 1`] = `
<div>
  <div>
    Loading
  </div>
</div>
`;

exports[`IssueList should render correctly with props 1`] = `
<div>
  <p>
    Issue1
  </p>
  <p>
    Issue2
  </p>
</div>
`;

exports[`IssueList should render without props 1`] = `
<div>
  <div>
    Loading
  </div>
</div>
`;
